#20 created activity for login

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".ColorPickerActivity" />
-        <activity android:name=".PalletePickerActivity"></activity>
+        <activity android:name=".PalletePickerActivity" />
+        <activity android:name=".LoginActivity"></activity>
     </application>
 
 </manifest>
