fixed the navigation flow of the app. Now, if an user is logged in the app will automatically skip the login screen, and if a user is in the Main Activity and hit back, then login screen will not show up.
Also, if an user signs out then the login screen will be shown, but the MainActivity will be taken out of history

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,9 +17,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity" />
-        <activity android:name=".ColorPickerActivity" />
-        <activity android:name=".PalletePickerActivity" />
-        <activity android:name=".LoginActivity">
+        <activity android:name=".ColorPickerActivity"
+            android:noHistory="true"/>
+        <activity android:name=".PalletePickerActivity"
+            android:noHistory="true" />
+        <activity android:name=".LoginActivity"
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
