--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity" />
-        <activity android:name=".ColorPickerActivity"
-            android:noHistory="true"/>
-        <activity android:name=".PalletePickerActivity"
-            android:noHistory="true" />
+        <activity android:name=".ColorPickerActivity" />
+        <activity android:name=".PalletePickerActivity" />
         <activity android:name=".LoginActivity"
             android:noHistory="true">
             <intent-filter>
